--- a/index.html
+++ b/index.html
@@ -592,12 +592,12 @@
                 <h1 class="logo">Realize</h1>
                 <p class="tagline">Resumos feitos por estudantes, para estudantes</p>
                 <p class="hero-description">
-                    Uma iniciativa filantrópica dedicada a democratizar o acesso ao conhecimento. Transformamos 
-                    conteúdos acadêmicos complexos em resumos claros e acessíveis, garantindo que todo estudante 
-                    tenha as ferramentas necessárias para seu sucesso educacional.
+                    Um projeto gratuito criado para ajudar estudantes como você. A gente transforma matérias 
+                    complicadas em resumos fáceis de entender, porque acreditamos que todo mundo merece ter 
+                    acesso a uma educação de qualidade.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://sites.google.com/view/realizeresumes/home" class="cta-button" target="_blank" rel="noopener noreferrer">
+                    <a href="https://sites.google.com/view/realizeresumes/in%C3%ADcio?authuser=0" class="cta-button" target="_blank" rel="noopener noreferrer">
                         Acessar Resumos Gratuitos
                     </a>
                     <a href="#contribuir" class="contribute-button">
@@ -615,10 +615,10 @@
                     <div class="feature-icon">
                         <i class="fas fa-book-open"></i>
                     </div>
-                    <h3 class="feature-title">Qualidade Acadêmica</h3>
+                    <h3 class="feature-title">Conteúdo de Qualidade</h3>
                     <p class="feature-description">
-                        Conteúdo rigorosamente revisado e estruturado, seguindo os mais altos padrões 
-                        educacionais para garantir precisão e clareza em cada resumo disponibilizado.
+                        Nossos resumos são cuidadosamente revisados e organizados para garantir que você 
+                        tenha informações corretas e bem explicadas em todos os materiais.
                     </p>
                 </div>
                 <div class="feature-card">
@@ -627,18 +627,18 @@
                     </div>
                     <h3 class="feature-title">Perspectiva Estudantil</h3>
                     <p class="feature-description">
-                        Desenvolvido por estudantes que compreendem os desafios acadêmicos contemporâneos, 
-                        oferecendo uma abordagem única e conectada com a realidade educacional atual.
+                        Criado por quem está na mesma situação que você. A gente entende suas dificuldades 
+                        e sabe como explicar de um jeito que realmente faz sentido.
                     </p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-heart"></i>
                     </div>
-                    <h3 class="feature-title">Acesso Universal</h3>
+                    <h3 class="feature-title">Totalmente Gratuito</h3>
                     <p class="feature-description">
-                        Projeto completamente filantrópico que visa eliminar barreiras educacionais, 
-                        garantindo que conhecimento de qualidade seja acessível a todos os estudantes.
+                        Nosso projeto é 100% gratuito porque acreditamos que todo estudante deve ter 
+                        acesso a materiais de estudo de qualidade, independente da sua situação.
                     </p>
                 </div>
             </div>
@@ -649,45 +649,43 @@
             <div class="about-content">
                 <h2>Sobre o Realize</h2>
                 <p>
-                    O Realize começou com uma ideia simples: ajudar outros estudantes. A gente sabe 
+                    O Realize começou com uma ideia simples: ajudar outros estudantes. Sabemos 
                     como é difícil estudar sozinho e entender matérias complicadas. Por isso, 
                     decidimos criar resumos que realmente funcionam.
                 </p>
                 <p>
-                    Nosso objetivo é transformar qualquer assunto difícil em algo que você consegue 
-                    entender. Fazemos isso de graça porque acreditamos que todo mundo merece ter 
-                    acesso a uma educação de qualidade.
+                    Nosso objetivo é transformar qualquer matéria difícil em algo que você consegue 
+                    entender de verdade. Fazemos isso de forma gratuita, porque acreditamos que todo mundo 
+                    merece ter acesso a uma educação de qualidade.
                 </p>
             </div>
         </section>
 
         <!-- Access Section -->
         <section class="access-section">
-            <h2>Biblioteca Digital</h2>
+            <h2>Nossa Biblioteca de Estudos</h2>
             <p>
-                Nossa coleção abrangente inclui resumos especializados em Matemática, Português, História, 
-                Geografia, Ciências, Inglês, Física, Química e Biologia. Todo conteúdo é organizado 
-                sistematicamente para otimizar sua experiência de aprendizado.
+               Temos resumos organizados de várias matérias: Matemática, Português, História, Geografia, Literatura, Redação, Inglês, Física, Química e Biologia. 
+               Todo conteúdo é organizado detalhadamente para otimizar sua experiência de aprendizado.
             </p>
-            <a href="https://sites.google.com/view/realizeresumes/home" class="access-button" target="_blank" rel="noopener noreferrer">
+            <a href="https://sites.google.com/view/realizeresumes/in%C3%ADcio?authuser=0" class="access-button" target="_blank" rel="noopener noreferrer">
                 Explorar Biblioteca
             </a>
         </section>
 
         <!-- Team Section -->
         <section id="equipe" class="team-section">
-            <h2 class="section-title">Liderança Acadêmica</h2>
+            <h2 class="section-title">Sobre as Autoras</h2>
             <div class="team-grid">
                 <div class="team-member">
                     <div class="member-avatar">C</div>
                     <h3 class="member-name">Carolina Corrêa de Souza Valadares</h3>
                     <p class="member-birth">27 de junho de 2012</p>
                     <p class="member-bio">
-                        Estudante dedicada com paixão pela literatura e cinema, desenvolvendo uma curiosidade 
-                        intelectual abrangente sobre diversas áreas do conhecimento. Aspira estudar no exterior, 
-                        especialmente nos Estados Unidos, e acredita firmemente que compartilhar conhecimento 
-                        é fundamental para o crescimento pessoal e coletivo. Através do Realize, transforma 
-                        conteúdos acadêmicos em textos acessíveis e compreensíveis.
+                        Ama ler e assistir filmes, e tem uma curiosidade natural sobre várias áreas do 
+                        conhecimento. Sonha em estudar no exterior, especialmente nos Estados Unidos, e 
+                        acredita que compartilhar conhecimento é essencial para todos crescermos juntos. 
+                        No Realize, busca produzir conteúdos complicados em textos que qualquer um consegue entender.
                     </p>
                 </div>
 
@@ -696,11 +694,10 @@
                     <h3 class="member-name">Julia Queiros Mendes</h3>
                     <p class="member-birth">10 de fevereiro de 2012</p>
                     <p class="member-bio">
-                        Apaixonada pela leitura, produção audiovisual e artes manuais, Julia nutre o sonho de 
-                        cursar ensino superior nos Estados Unidos. Fundamenta sua filosofia educacional na crença 
-                        de que o conhecimento é a base fundamental da vida, motivando-a a compartilhar seu 
-                        aprendizado com outros estudantes. O Realize representa sua missão de impactar 
-                        positivamente a jornada educacional de outras pessoas.
+                        Passa o tempo livre lendo livros, vendo séries ou fazendo crochê. Sonha em estudar 
+                        em uma universidade no exterior, especificamente nos Estados Unidos. Acredita que o 
+                        conhecimento é a base de tudo na vida e, por isso, quer compartilhar o que sabe com 
+                        outras pessoas. Com o Realize, esperamos conseguir fazer a diferença na vida de outros estudantes.
                     </p>
                 </div>
             </div>
@@ -708,18 +705,18 @@
 
         <!-- Contribution Section -->
         <section id="contribuir" class="contribution-section">
-            <h2>Contribua Conosco</h2>
+            <h2>Como contribuir</h2>
             <p>
-                Convidamos estudantes dedicados a se juntarem à nossa missão educacional. Contribuições 
-                são aceitas mediante revisão acadêmica, devendo incluir identificação da disciplina, 
-                tópico específico e dados do autor para devida atribuição intelectual.
+                Convidamos estudantes dedicados a se juntarem à nossa missão educacional!
+                É necessário incluir a matéria, o tópico específico e seu nome completo, para 
+                darmos os devidos créditos.
             </p>
             <div class="email-highlight">
-                Submissões acadêmicas: <a href="mailto:realize2710@gmail.com">realize2710@gmail.com</a>
+                Envie seu material: <a href="mailto:realize2710@gmail.com">realize2710@gmail.com</a>
             </div>
             <p>
-                Juntos, construímos um repositório acadêmico colaborativo que reflete nossa visão compartilhada 
-                de uma educação verdadeiramente democrática e acessível.
+                Juntos, criamos uma biblioteca de estudos colaborativa que representa nossa visão de 
+                uma educação acessível para todos.
             </p>
         </section>
 
@@ -729,8 +726,8 @@
                 <div class="footer-brand">
                     <div class="footer-logo">Realize</div>
                     <p class="footer-tagline">
-                        Projeto educacional filantrópico dedicado à democratização do conhecimento acadêmico, 
-                        criando pontes entre complexidade curricular e compreensão universal.
+                        Projeto educacional gratuito criado para democratizar o acesso ao conhecimento, 
+                        conectando estudantes através de resumos claros e acessíveis.
                     </p>
                     <div class="social-links">
                         <a href="mailto:realize2710@gmail.com" class="social-link" title="Email">
@@ -745,7 +742,7 @@
                 <div class="footer-links">
                     <h4>Recursos</h4>
                     <ul>
-                        <li><a href="https://sites.google.com/view/realizeresumes/home" target="_blank" rel="noopener noreferrer">Acessar Resumos</a></li>
+                        <li><a href="https://sites.google.com/view/realizeresumes/in%C3%ADcio?authuser=0" target="_blank" rel="noopener noreferrer">Acessar Resumos</a></li>
                         <li><a href="#sobre">Sobre o Projeto</a></li>
                         <li><a href="#equipe">Nossa Equipe</a></li>
                         <li><a href="#contribuir">Como Contribuir</a></li>
@@ -766,7 +763,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Realize. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Realize. Biblioteca educacional.</p>
             </div>
         </footer>
     </div>
