--- a/index.html
+++ b/index.html
@@ -761,10 +761,8 @@
                     </div>
                 </div>
             </div>
-            
-            <div class="footer-bottom">
-                <p>&copy; 2025 Realize. Biblioteca educacional.</p>
-            </div>
+            >
+    extracurrilar project
         </footer>
     </div>
 </body>
